[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pysbr"
version = "0.0.1"
description = "Python client for SBR lines/markets"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Joshua Wozniak" }]
license = "MIT"
dependencies = [
  "requests>=2.28",
  "pandas>=1.5",
]

[tool.setuptools]
packages = ["pysbr"]  # now this directory actually exists

[tool.setuptools.package-data]
# include any non-.py files you need at runtime
pysbr = ["queries/**/*", "config/**/*", "*.txt", "*.json", "*.yaml", "*.yml"]

[tool.setuptools.include-package-data]
# not strictly required with package-data above, but fine to keep
